packages/svelte/tests/validator/samples/store-runes-conflict/input.svelte
<script>
	const state = 42;
	$state();
</script>
