packages/svelte/tests/compiler-errors/samples/runes-no-const-update/main.svelte
<script>
	const a = $state(0);
	a++;
</script>
